--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,29 @@
     <meta name="keywords" content="Cine en línea, películas online, streaming de cine, ver películas en internet">
     <title>CineFlix</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/CineFlix.ico">
+    <link rel="stylesheet" href="./assets/style/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
+
 <body>
+    <header>
+
+    </header>
+
+    <main>
+        <!-- Ultimos lanzamientos -->
+        <section></section>
+
+        <!-- Proximas peliculas -->
+        <section></section>
+    </main>
+
+    <footer>
+
+    </footer>
 
     <!-- Script -->
     <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
