--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Disfruta del mejor cine en línea con CineFlix. Encuentra una amplia selección de películas de todos los géneros.">
+    <meta name="description"
+        content="Disfruta del mejor cine en línea con CineFlix. Encuentra una amplia selección de películas de todos los géneros.">
     <meta name="keywords" content="Cine en línea, películas online, streaming de cine, ver películas en internet">
     <title>CineFlix</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/CineFlix.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./assets/style/style.css">
 </head>
@@ -18,36 +20,36 @@
         <img src="./assets/img/loader.gif" alt="Loader">
     </div>
 
-    <header class="header-container" id="content" style="display: none;">
+    <header class="header-container" id="content-header" style="display: none;">
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner" id="header-movies">
-            </div>
-            <button class="carousel-control-next" id="btn-header" type="button"
-                data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            <div class="carousel-inner" id="header-movies"></div>
         </div>
-        <button class="carousel-control-prev" type="button" id="btn-header" data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="prev">
+        <button class="carousel-control-next" id="btn-header" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+        <button class="carousel-control-prev" type="button" id="btn-header" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
     </header>
 
-    <main id="content" style="display: none;">
+    <main class="container separation-from-main" id="content-main" style="display: none;">
         <!-- Ultimos lanzamientos -->
-        <section></section>
+        <section>
+        </section>
 
         <!-- Proximas peliculas -->
-        <section></section>
+        <section>
+        </section>
     </main>
 
-    <footer id="content" style="display: none;">
+    <footer>
 
     </footer>
 
     <!-- Script -->
+    <script src="./assets/js/loader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
