Separador de secciones.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner" id="header-movies"></div>
         </div>
-        <button class="carousel-control-next" id="btn-header" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+        <button class="carousel-control-next" id="btn-header" type="button" data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
-        <button class="carousel-control-prev" type="button" id="btn-header" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" id="btn-header" data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
@@ -37,10 +39,12 @@
     <main class="container separation-from-main" id="content-main" style="display: none;">
         <!-- Ultimos lanzamientos -->
         <section>
+
         </section>
 
         <!-- Proximas peliculas -->
         <section>
+
         </section>
     </main>
 
@@ -63,3 +67,17 @@
 </body>
 
 </html>
+
+
+<!-- 
+ <div class="separator">
+                <div class="separator-text">
+                    <h4>Próximas películas</h4>
+                    <div></div>
+                </div>
+                <div class="separator-click">
+                    <p>Ver más</p>
+                </div>
+            </div>
+
+-->
