--- a/index.html
+++ b/index.html
@@ -39,12 +39,28 @@
     <main class="container separation-from-main" id="content-main" style="display: none;">
         <!-- Ultimos lanzamientos -->
         <section>
-
+ <div class="separator">
+                <div class="separator-text">
+                    <h4>Próximas películas</h4>
+                    <div></div>
+                </div>
+                <div class="separator-click">
+                    <p>Ver más</p>
+                </div>
+            </div>
         </section>
 
         <!-- Proximas peliculas -->
         <section>
-
+ <div class="separator">
+                <div class="separator-text">
+                    <h4>Próximas películas</h4>
+                    <div></div>
+                </div>
+                <div class="separator-click">
+                    <p>Ver más</p>
+                </div>
+            </div>
         </section>
     </main>
 
